<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.transformer.TransformerActivity">

    <android.support.v7.widget.Toolbar
        style="@style/AppTheme.ToolbarStyle"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:theme="@style/AppTheme.ThemeOverlay"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fields_container_padding">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_transformer_name"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords|textPersonName"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                style="@style/TextView.Hint"
                android:id="@+id/tvTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_transformer_team"
                android:layout_marginTop="@dimen/transformer_team_text_margin_top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputName"/>

            <RadioGroup
                android:id="@+id/rgTeam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/transformer_component_margin_top"
                app:layout_constraintTop_toBottomOf="@+id/tvTeam"
                app:layout_constraintStart_toStartOf="@+id/tvTeam"
                app:layout_constraintEnd_toEndOf="parent">

                <RadioButton
                    android:id="@+id/rbTeamAutobots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_transformer_team_autobots"
                    android:textAppearance="?android:textAppearanceSmall"/>

                <RadioButton
                    android:id="@+id/rbTeamDecepticons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/transformer_radio_button_margin_start"
                    android:text="@string/text_transformer_team_decepticons"
                    android:textAppearance="?android:textAppearanceSmall"/>

            </RadioGroup>

            <TextView
                style="@style/TextView.Hint"
                android:id="@+id/tvStrength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_transformer_stats_strength"
                android:layout_marginTop="@dimen/transformer_stats_text_margin_top"
                app:layout_constraintStart_toStartOf="@+id/tvTeam"
                app:layout_constraintTop_toBottomOf="@+id/rgTeam"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/sbStrength"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/transformer_component_margin_top"
                app:layout_constraintTop_toBottomOf="@+id/tvStrength"
                app:layout_constraintStart_toStartOf="@+id/tvStrength"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                style="@style/TextView.Hint"
                android:id="@+id/tvIntelligence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_transformer_stats_intelligence"
                android:layout_marginTop="@dimen/transformer_stats_text_margin_top"
                app:layout_constraintStart_toStartOf="@+id/tvTeam"
                app:layout_constraintTop_toBottomOf="@+id/sbStrength"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/sbIntelligence"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/transformer_component_margin_top"
                app:layout_constraintTop_toBottomOf="@+id/tvIntelligence"
                app:layout_constraintStart_toStartOf="@+id/tvIntelligence"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                style="@style/TextView.Hint"
                android:id="@+id/tvSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_transformer_stats_speed"
                android:layout_marginTop="@dimen/transformer_stats_text_margin_top"
                app:layout_constraintStart_toStartOf="@+id/tvTeam"
                app:layout_constraintTop_toBottomOf="@+id/sbIntelligence"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/sbSpeed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/transformer_component_margin_top"
                app:layout_constraintTop_toBottomOf="@+id/tvSpeed"
                app:layout_constraintStart_toStartOf="@+id/tvSpeed"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                style="@style/TextView.Hint"
                android:id="@+id/tvEndurance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_transformer_stats_endurance"
                android:layout_marginTop="@dimen/transformer_stats_text_margin_top"
                app:layout_constraintStart_toStartOf="@+id/tvTeam"
                app:layout_constraintTop_toBottomOf="@+id/sbSpeed"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/sbEndurance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/transformer_component_margin_top"
                app:layout_constraintTop_toBottomOf="@+id/tvEndurance"
                app:layout_constraintStart_toStartOf="@+id/tvEndurance"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                style="@style/TextView.Hint"
                android:id="@+id/tvRank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_transformer_stats_rank"
                android:layout_marginTop="@dimen/transformer_stats_text_margin_top"
                app:layout_constraintStart_toStartOf="@+id/tvTeam"
                app:layout_constraintTop_toBottomOf="@+id/sbEndurance"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/sbRank"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/transformer_component_margin_top"
                app:layout_constraintTop_toBottomOf="@+id/tvRank"
                app:layout_constraintStart_toStartOf="@+id/tvRank"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                style="@style/TextView.Hint"
                android:id="@+id/tvCourage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_transformer_stats_courage"
                android:layout_marginTop="@dimen/transformer_stats_text_margin_top"
                app:layout_constraintStart_toStartOf="@+id/tvTeam"
                app:layout_constraintTop_toBottomOf="@+id/sbRank"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/sbCourage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/transformer_component_margin_top"
                app:layout_constraintTop_toBottomOf="@+id/tvCourage"
                app:layout_constraintStart_toStartOf="@+id/tvCourage"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                style="@style/TextView.Hint"
                android:id="@+id/tvFirePower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_transformer_stats_firepower"
                android:layout_marginTop="@dimen/transformer_stats_text_margin_top"
                app:layout_constraintStart_toStartOf="@+id/tvTeam"
                app:layout_constraintTop_toBottomOf="@+id/sbCourage"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/sbFirePower"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/transformer_component_margin_top"
                app:layout_constraintTop_toBottomOf="@+id/tvFirePower"
                app:layout_constraintStart_toStartOf="@+id/tvFirePower"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                style="@style/TextView.Hint"
                android:id="@+id/tvSkill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_transformer_stats_skill"
                android:layout_marginTop="@dimen/transformer_stats_text_margin_top"
                app:layout_constraintStart_toStartOf="@+id/tvTeam"
                app:layout_constraintTop_toBottomOf="@+id/sbFirePower"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/sbSkill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/transformer_component_margin_top"
                app:layout_constraintTop_toBottomOf="@+id/tvSkill"
                app:layout_constraintStart_toStartOf="@+id/tvSkill"
                app:layout_constraintEnd_toEndOf="parent"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>