<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_action_save_update"
        android:title="@string/menu_action_transformer_save"
        app:showAsAction="always"/>
</menu>