<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.arena.ArenaActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:theme="@style/AppTheme.ThemeOverlay">

        <android.support.v7.widget.Toolbar
            style="@style/AppTheme.ToolbarStyle"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/arena_recycler_view_margin"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/layout_item_transformers"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabNewTransformer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/arena_new_fab_margin"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_add"
        android:background="?android:attr/selectableItemBackground"
        app:fabSize="normal"
        app:elevation="8dp"
        app:layout_anchor="@id/recyclerView"
        app:layout_anchorGravity="bottom|end"/>

</android.support.design.widget.CoordinatorLayout>